Code optimization & effect on click for rating

--- a/onyx/example/level.html
+++ b/onyx/example/level.html
@@ -37,12 +37,20 @@
 				{content: "Level progress, from -5 to 5, critical at -2 and warning at 1", style: "margin: 10px;"},
 				{kind: "onyx.LevelProgress", minimum: -5, critical: -2, warning: 1, maximum: 5},
 				{tag: "hr"},
+				{content: "Level progress, from 0 to 5, critical at 1 and warning at 2, small size", style: "margin: 10px;"},
+				{kind: "onyx.LevelProgress", minimum: 0, critical: 1, warning: 2, maximum: 5, style: "height: 20px; line-height: 20px; width: 200px"},
+				{tag: "hr"},
 				{content: "Simple rating level from 0 to 10", style: "margin: 10px;"},
 				{kind: "onyx.RatingLevel", minimum:0, maximum: 10},
 				{tag: "hr"},
 				{content: "Rating level, 2/5, un-editable", style: "margin: 10px;"},
 				{style: "width: 200px", components: [
 					{kind: "onyx.RatingLevel", minimum:0, maximum: 5, value: 2, editable: false},
+				]},
+				{tag: "hr"},
+				{content: "Rating level, 2/5, un-editable, in small size", style: "margin: 10px;"},
+				{style: "width: 120px", components: [
+					{kind: "onyx.RatingLevel", style: "height: 16px", minimum:0, maximum: 5, value: 2, editable: false},
 				]},
 				{tag: "hr"},
 				{content: "Note: the minimum value is no selection", style: "margin: 10px;"},
