New control : Navigation Bar
Corrected title in examples

--- a/onyx/example/level.html
+++ b/onyx/example/level.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>onyx textarea sample</title>
+	<title>Onyx : LevelProgress &amp; RatingLevel samples</title>
 	<script src="http://enyojs.com/enyo-2.0b3/enyo.js" type="text/javascript"></script>
 	<script>
 		enyo.depends(
