--- a/onyx/example/textarea.html
+++ b/onyx/example/textarea.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>onyx textarea sample</title>
+	<title>Onyx : TextArea sample</title>
 	<script src="http://enyojs.com/enyo-2.0b2/enyo.js" type="text/javascript"></script>
 	<script>
 		enyo.depends(
