Update Example and minor css change

--- a/onyx/navigationbar.html
+++ b/onyx/navigationbar.html
@@ -21,7 +21,7 @@
 			kind: "Control",
 			components: [
 				{tag: "hr"},
-				{kind: "onyx.NavigationBar", name: "demo", onSelected: "select", onPathRemove: "remove"},
+				{kind: "onyx.NavigationBar", style:"margin: 20px", name: "demo", onSelected: "select", onPathRemove: "remove"},
 				{tag: "hr"},
 				{kind: "onyx.Button", ontap: "go", content: "Add date to path"},
 				{kind: "onyx.Button", ontap: "sPrev", content: "Select Previous"},
