Live examples for GradientSlider and CustomGradientSlider

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
 	<hr />
 	<a href="onyx/navigationbar.html">NavigationBar example</a><br />
 	<i>Description come soon</i>
+	<hr />
+	<a href="onyx/sliders.html">GradientSlider and CustomGradientSlider examples</a><br />
+	<i>Description come soon</i>
 </body>
 </html>
