Example for DynamicList

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
 	<hr />
 	<a href="onyx/sliders.html">GradientSlider and CustomGradientSlider examples</a><br />
 	<i>Description come soon</i>
+	<hr />
+	<a href="onyx/dynamiclist.html">DynamicList example</a><br />
+	<i>Description come soon</i>
 </body>
 </html>
