Update to version 1.2 of DynamicList

--- a/onyx/dynamiclist.html
+++ b/onyx/dynamiclist.html
@@ -43,7 +43,7 @@
 				this.$.list.invalidateRow(14);
 			},
 			goBottom: function() {
-				this.$.list.$.scroller.scrollTo(0, this.$.list.$.scroller.getScrollBounds().height);
+				this.$.list.scrollTo(0, this.$.list.getScrollBounds().height);
 			},
 			rowTap: function(inSender, inEvent) {
 				console.log("onRowTap", inEvent);
