Add descriptions and Notification addon

--- a/index.html
+++ b/index.html
@@ -6,24 +6,28 @@
 </head>
 <body>
 	<a href="localize/example/index.html">Localization example</a><br />
-	<i>Description come soon</i>
+	<i>Localize your Enyo 2 app</i>
 	<hr />
 	<a href="onyx/level.html">LevelProgress &amp; RatingLevel examples</a><br />
-	<i>Description come soon</i>
+	<i>2 controls (the second based on the first) to display level progress bar and a rating bar. Features live value change by clicking or "sliding", and critical value and warning value for "LevelProgress".</i>
 	<hr />
 	<a href="onyx/textarea.html">TextArea examples</a><br />
-	<i>Description come soon</i>
+	<i>A TextArea control (based on onyx.Input) that automatically resizes.</i>
 	<hr />
 	<a href="onyx/updown.html">UpDown examples</a><br />
-	<i>Description come soon</i>
+	<i>A Up and Down control, maintaining the cursor increase progressively the event speed.</i>
 	<hr />
 	<a href="onyx/navigationbar.html">NavigationBar example</a><br />
-	<i>Description come soon</i>
+	<i>A path bar, that can be used as an history navigation bar</i>
 	<hr />
 	<a href="onyx/sliders.html">GradientSlider and CustomGradientSlider examples</a><br />
-	<i>Description come soon</i>
+	<i>Simple extension to slider, that provide gradient display</i>
 	<hr />
 	<a href="onyx/dynamiclist.html">DynamicList example</a><br />
-	<i>Description come soon</i>
+	<i>A list that load only visible row</i>
+	<hr />
+	<a href="notification/index.html">Notification example</a><br />
+	<i>Available theme : <b>Bezel, Message Bar, Pop, Badged</b><br />
+	<i>A notification center, inspered by Growl and other</i>
 </body>
 </html>
