Update Index, path fix

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<i>A list that load only visible row</i>
 	<hr />
 	<a href="notification/index.html">Notification example</a><br />
-	<i>Available theme : <b>Bezel, Message Bar, Pop, Badged</b><br />
+	<i>Available theme : <b>Bezel, Message Bar, Pop, Badged, PageCurl</b><br />
 	<i>A notification center, inspered by Growl and other</i>
 </body>
 </html>
