Add example for Marquee

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 	<i>A list that load only visible row</i>
 	<hr />
 	<a href="notification/index.html">Notification example</a><br />
-	<i>Available theme : <b>Bezel, Message Bar, Pop, Badged, PageCurl</b><br />
+	<i>Available theme : <b>Bezel, Message Bar, Pop, Badged, PageCurl</b></i><br />
 	<i>A notification center, inspered by Growl and other</i>
+	<hr />
+	<a href="onyx/marquee.html">Marquee example</a><br />
+	<i>Marquee: Slide too long text</i>
 </body>
 </html>
