Add Folding example

--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
 	<hr />
 	<a href="onyx/marquee.html">Marquee example</a><br />
 	<i>Marquee: Slide too long text</i>
+	<hr />
+	<a href="onyx/folding.html">Folding example</a><br />
+	<i>Fold and unfold part of page</i>
 </body>
 </html>
