--- a/onyx/marquee.html
+++ b/onyx/marquee.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Onyx : UpDown sample</title>
+	<title>Onyx : Marquee Example</title>
 	<script src="http://enyojs.com/enyo-2.0b5/enyo.js" type="text/javascript"></script>
 	<script>
 		enyo.depends(
