Add GrowTextBox example

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	<i>2 controls (the second based on the first) to display level progress bar and a rating bar. Features live value change by clicking or "sliding", and critical value and warning value for "LevelProgress".</i>
 	<hr />
 	<a href="onyx/textarea.html">TextArea examples</a><br />
-	<i>A TextArea control (based on onyx.Input) that automatically resizes.</i>
+	<i>A TextArea control (based on onyx.Input) that automatically resizes.<br />
+		<b>GrowTextBox is a better addon, please use it ;)</b></i>
 	<hr />
 	<a href="onyx/updown.html">UpDown examples</a><br />
 	<i>A Up and Down control, maintaining the cursor increase progressively the event speed.</i>
@@ -35,5 +36,8 @@
 	<hr />
 	<a href="onyx/folding.html">Folding example</a><br />
 	<i>Fold and unfold part of page</i>
+	<hr />
+	<a href="onyx/growtextbox.html">GrowTextBox example</a><br />
+	<i>Automatic resizing text area (vertical or horizontal or both or none)</i>
 </body>
 </html>
