Example for UndoRedo

--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
 	<hr />
 	<a href="onyx/growtextbox.html">GrowTextBox example</a><br />
 	<i>Automatic resizing text area (vertical or horizontal or both or none)</i>
+	<hr />
+	<a href="UndoRedo/example.html">UndoRedo example</a><br />
+	<i>Add to Component the ability to undone properties change</i>
 </body>
 </html>
