--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
 	<hr />
 	<a href="UndoRedo/example.html">UndoRedo example</a><br />
 	<i>Add to Component the ability to undone properties change</i>
+	<hr />
+	<a href="Griddable/basic.html">Griddable Layout example</a><br />
+	<i>A grid layout</i>
 </body>
 </html>
