--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<a href="onyx/level.html">LevelProgress &amp; RatingLevel examples</a><br />
 	<i>2 controls (the second based on the first) to display level progress bar and a rating bar. Features live value change by clicking or "sliding", and critical value and warning value for "LevelProgress".</i>
 	<hr />
-	<a href="onyx/textarea.html">TextArea examples</a><br />
+	<s><a href="onyx/textarea.html">TextArea examples</a></s><br />
 	<i>A TextArea control (based on onyx.Input) that automatically resizes.<br />
 		<b>GrowTextBox is a better addon, please use it ;)</b></i>
 	<hr />
@@ -43,7 +43,7 @@
 	<a href="UndoRedo/example.html">UndoRedo example</a><br />
 	<i>Add to Component the ability to undone properties change</i>
 	<hr />
-	<a href="Griddable/basic.html">Griddable Layout example</a><br />
+	<a href="griddable/basic.html">Griddable Layout example</a><br />
 	<i>A grid layout</i>
 </body>
 </html>
